# OpsPilot

./: .gitignore  .gitlab-ci.yml  Dockerfile.actions  README.md  compose.yaml  config.yml  credentials.yml  endpoints.yml  pyproject.toml
.github/workflows/: build.yml  build_and_push_backend.yml  build_and_push_frontend.yml  cipipeline.yml  security_checks.yml
actions/: README.md  actions.py  docker_configs.yaml  dockerfile_action.py  kubernetes_action.py  pipeline_action.py
actions/forms/: __init__.py  docker_forms.py  k8s_forms.py  pipeline_forms.py
actions/templates/kubernetes/: deployment.yaml.j2  ingress.yaml.j2  registry-secret.yaml.j2  secret.yaml.j2
actions/templates/pipeline-templates/: github_actions.yml.j2  gitlab-ci.yml.j2
actions/validators/: __init__.py
actions/validators/docker/: __init__.py  app_name_validator.py  base_validator.py  build_tool_validator.py  build_type_validator.py  entrypoint_validator.py  image_version_validator.py  language_validator.py  port_validator.py  (+1 more)
data/: Slot-Form_Mapping.csv  rules.yml  stories.yml
data/basics/: base.yml  bot_challenge.yml  goodbye.yml  greet.yml  tech.yml  thanks.yml
data/templating/: generate_dockerfile.yml  generate_kubernetes_deployment.yaml  generate_pipeline_manifest.yaml
domain/: base.yml  docker.yml  kubernetes.yml  pipeline.yml  tech.yaml
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/public/: env.template.js
frontend/src/: App.tsx  custom.d.ts  index.css
graphs/: base.dot  docker_form.dot  k8s_form.dot  pipeline_form.dot
scripts/: train_model.sh
(+45 files in other folders)
